# roboreactor-firmata

./: LICENSE  README.md  installation.sh  pyproject.toml  upload_stm32_dfu.sh
example/: analog_servo_led_example.py  i2c_multiplexer_example.py
firmware/StandardFirmataCustom_ESP32/: StandardFirmataCustom_ESP32.ino
firmware/StandardFirmataCustom_STM32/: StandardFirmataCustom_STM32.ino
roboreactor_firmata/: __init__.py  board.py  esp32.py  stm32.py
roboreactor_firmata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
