[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboreactor-firmata"
version = "0.1.0"
authors = [
    { name = "RoboReactor", email = "info@roboreactor.com" }
]
description = "A unified, dynamic Firmata control library supporting GPIO, I2C, SPI, UART, and CAN-bus on STM32 and ESP32 microcontrollers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyfirmata2>=2.4.4",
    "pyserial>=3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["roboreactor_firmata*"]
